# django-vercel-tasks

./: .pdm-python  pyproject.toml
doc/: commands.txt  example.txt  note.txt  tree.txt
http/: tasks.http
notebooks/: Untitled.ipynb
src/: db.sqlite3  manage.py
src/core/__seedwork/application/: output.py  use_cases.py
src/core/__seedwork/domain/: entities.py  repositories.py  validators.py
src/core/__seedwork/infra/: mappers.py
src/core/modules/v1/tasks/application/: output.py  use_cases.py
src/core/modules/v1/tasks/domain/: entities.py  repositories.py  services.py  validators.py
src/core/modules/v1/tasks/infra/: in_memory_repositories.py  mappers.py  repositories.py
src/django_app/: api.py  config.py  container.py  permissions.py  settings.py  urls.py
src/django_app/__shared/: api.py  asgi.py  settings.py  urls.py  wsgi.py
src/django_app/modules/tasks/: apps.py  models.py
src/django_app/modules/tasks/migrations/: 0001_initial.py
src/django_app/modules/v1/tasks/: admin.py  api.py  apps.py  containers.py  mappers.py  models.py  repository.py  serializers.py  tests.py  urls.py  views.py
src/django_app/modules/v1/tasks/migrations/: 0001_initial.py
